[BugFix]
入力支援ボタンの定義ファイルで色情報を記述していなかった場合、
入力支援ボタン群が生成されなかったのを修正